@@ -7,7 +7,8 @@
 
 Besides the messages from Therion and other programs used, the log file
 contains information about computed values of magnetic declination and meridian
-convergence, loop errors and scrap distortions.
+convergence, loop errors, scrap distortions and transformations beetwen
+coordinate reference systems chosen by the Proj library.
 
 Absolute loop error is $\sqrt{\Delta x^2+\Delta y^2+\Delta z^2}$, where
 $\Delta x$ is the difference between the identical start and end points of
