@@ -36,6 +36,7 @@
 #include "thlocale.h"
 #include "thtmpdir.h"
 #include "thcs.h"
+#include "thproj.h"
 
 #ifdef THWIN32
 #include <windows.h>
@@ -78,6 +79,8 @@ const char * THCCC_INIT_FILE = "### Output character encodings ###\n"
 "# cs-def <id> <proj4id> [other options]\n\n"
 "### Let PROJ v6+ find the optimal transformation ###\n"
 "# proj-auto off\n\n"
+"### PROJ v6+ handling of missing transformation grids if proj-auto is on ###\n"
+"# proj-missing-grid warn\n\n"
 "### Command to remove temporary directory ###\n"
 "# tmp-remove  \"\"\n\n";
 
@@ -86,6 +89,7 @@ thinit::thinit()
   this->fonts_ok = false;
   this->tex_env = false;
   this->proj_auto = false;
+  this->proj_missing_grid = GRID_WARN;
   this->lang = THLANG_UNKNOWN;
 	this->loopc = THINIT_LOOPC_UNKNOWN;
 }
@@ -118,6 +122,7 @@ enum {
   TTIC_TEXT,	
   TTIC_PDF_FONTS,
   TTIC_PROJ_AUTO,
+  TTIC_PROJ_MISSING_GRID,
   TTIC_OTF2PFB,
   TTIC_CS_DEF,
   TTIC_UNKNOWN,
@@ -145,6 +150,7 @@ static const thstok thtt_initcmd[] = {
   {"pdf-fonts", TTIC_PDF_FONTS},
   {"pdftex-path", TTIC_PATH_PDFTEX},
   {"proj-auto", TTIC_PROJ_AUTO},
+  {"proj-missing-grid", TTIC_PROJ_MISSING_GRID},
   {"source-path", TTIC_PATH_SOURCE},
   {"tex-env",TTIC_TEX_ENV},
   {"tex-fonts",TTIC_TEX_FONTS},
@@ -447,6 +453,7 @@ void thinit::load()
         case TTIC_OTF2PFB:
         case TTIC_TEX_ENV:
         case TTIC_PROJ_AUTO:
+        case TTIC_PROJ_MISSING_GRID:
           if (nargs != 2)
             ththrow(("invalid number of command arguments"));
           break;
@@ -529,6 +536,13 @@ void thinit::load()
           if (sv == TT_UNKNOWN_BOOL)
             ththrow(("invalid proj-auto switch -- %s", args[1]))
           this->proj_auto = (sv == TT_TRUE);
+          break;
+
+        case TTIC_PROJ_MISSING_GRID:
+          sv = thcs_parse_gridhandling(args[1]);
+          if (sv == GRID_INVALID)
+            ththrow(("invalid proj-missing-grid switch -- %s", args[1]))
+          this->proj_missing_grid = sv;
           break;
 
         case TTIC_TEXT:
@@ -758,6 +772,11 @@ char * thinit::get_path_otftotfm()
 bool thinit::get_proj_auto()
 {
   return this->proj_auto;
+}
+
+int thinit::get_proj_missing_grid()
+{
+  return this->proj_missing_grid;
 }
 
 void thinit::set_proj_lib_path() {  // set PROJ library resources path
